--- a/dummy-credentials.conf
+++ b/dummy-credentials.conf
@@ -1,12 +1,13 @@
-# Настройки подключения
+### Настройки подключения ###
 
-REMOTE_USER="user"                                          # Пользователь на сервере
-REMOTE_HOST="127.0.0.1"                                     # Домен или IP-адрес сервера
-REMOTE_DIR="/home/s/site"                                   # Директория сайта на сервере
+REMOTE_USER="user"                                          # Пользователь на удалённом сервере
+REMOTE_HOST="127.0.0.1"                                     # Домен или IP-адрес удалённого сервера
+REMOTE_DIR="/home/s/site"                                   # Директория сайта на удалённом сервере
 
-# Массив с данными для подключения к базам данных
+### Массив с данными для подключения к базам данных ###
 
-declare -A DATABASES=(                                      # Параметры подключения ["БАЗА_ДАННЫХ"]="ПОЛЬЗОВАТЕЛЬ:ПАРОЛЬ"
+## Параметры подключения ["БАЗА_ДАННЫХ"]="ПОЛЬЗОВАТЕЛЬ:ПАРОЛЬ"
+declare -A DATABASES=(                                      
     ["db1"]="db1_name:db1_user:db1_password"
     ["db2"]="db2_name:db2_user:db2_password"
 )
